version/0.12/_sources/api/solver/_autosummary/settings/source_terms.rst.txt
:orphan:

.. _source_terms:

source_terms
============

.. currentmodule:: ansys.fluent.core.solver.settings_231.source_terms

.. autoclass:: source_terms
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

============================================================================   =================================================================================

Child                                                                                                                                                    Summary

============================================================================   =================================================================================
:ref:`linearization <linearization>`                                               Menu containing options to enable/disable linearization of DPM source terms. 

:ref:`implicit_momentum_coupling <implicit_momentum_coupling>`                              Enable/disable implicit treatment for the DPM momentum source terms.

:ref:`implicit_source_term_coupling <implicit_source_term_coupling>`                                 Enable/disable implicit treatment for all DPM source terms.

:ref:`linear_growth_of_dpm_source_terms <linear_growth_of_dpm_source_terms>`           Enable/disable the linear growth of DPM source terms every DPM iteration.

:ref:`reset_sources_at_timestep <reset_sources_at_timestep>`                        Enable/disable flushing of DPM source terms at beginning of every time step.

============================================================================   =================================================================================

.. rubric:: Included in:

==========================   ===================================================================================================================

Parent                                                                                                                                   Summary

==========================   ===================================================================================================================
:ref:`numerics <numerics>`       Main menu to allow users to set options controlling the solution of ordinary differential equations describing 

==========================   ===================================================================================================================

