version/0.17/_sources/api/solver/_autosummary/settings/source_terms.rst.txt
:orphan:

.. _source_terms:

source_terms
============

.. autoclass:: ansys.fluent.core.solver.settings_232.source_terms.source_terms
    :show-inheritance:

.. rubric:: Attributes

==============================================================================================   ====================================================================================

Attribute                                                                                                                                                                     Summary

==============================================================================================   ====================================================================================
:ref:`linearization <linearization>`                                                                    Menu containing options to enable/disable linearization of DPM source terms. 

:ref:`implicit_momentum_coupling <implicit_momentum_coupling>`                                                   Enable/disable implicit treatment for the DPM momentum source terms.

:ref:`implicit_source_term_coupling <implicit_source_term_coupling>`                                                      Enable/disable implicit treatment for all DPM source terms.

:ref:`linear_growth_of_dpm_source_terms <linear_growth_of_dpm_source_terms>`                                Enable/disable the linear growth of DPM source terms every DPM iteration.

:ref:`reset_sources_at_timestep <reset_sources_at_timestep>`                                             Enable/disable flushing of DPM source terms at beginning of every time step.

:ref:`underrelaxation_factor <underrelaxation_factor>`                                                                                       DPM source term under-relaxation factor.

:ref:`second_order_time_accurate_sources_enabled <second_order_time_accurate_sources_enabled>`       Enable/disable second order accurate formulation for transient DPM source terms.

==============================================================================================   ====================================================================================

.. rubric:: Included in:

==========================   ===================================================================================================================

Parent                                                                                                                                   Summary

==========================   ===================================================================================================================
:ref:`numerics <numerics>`       Main menu to allow users to set options controlling the solution of ordinary differential equations describing 

==========================   ===================================================================================================================

